# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("../../../../../distributedaudio.gni")

group("unittest") {
  testonly = true
  deps = [
    "${common_path}/test/unittest:daudio_utils_test",
    "${distributedaudio_path}/audiohandler/test/unittest:audio_handler_test",
    "${interfaces_path}/inner_kits/native_cpp/test/unittest/audiosinktest:audio_sink_test",
    "${interfaces_path}/inner_kits/native_cpp/test/unittest/audiosourcetest:audio_source_test",
    "${services_path}/audioclient/test/unittest:daudio_client_test",
    "${services_path}/audiocontrol/test/unittest:daudio_control_test",
    "${services_path}/audiohdiproxy/test/unittest:daudio_hdi_proxy_test",
    "${services_path}/audiomanager/test/unittest:daudio_manager_test",
    "${services_path}/audioprocessor/test/unittest:daudio_processor_test",
    "${services_path}/audiotransport/test/unittest:daudio_transport_test",
  ]
}
