# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")
import("../../../../../distributedaudio.gni")

module_out_path = "distributed_audio/services/audioclient/mic_client_test"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${mediastandardfwk_path}/audiocommon/include",
  ]

  include_dirs += [
    "${audio_client_path}/interface",
    "${audio_client_path}/micclient/include",
    "${audio_client_path}/test/unittest/micclient/include",
    "${audio_client_path}/test/unittest/audioclienttestutils/include",
    "${audio_processor_path}/encodeprocessor/include",
    "${audio_processor_path}/interface",
    "${audio_transport_path}/audiochannel/interface",
    "${audio_transport_path}/audiochannel/audiodatachannel/include",
    "${audio_transport_path}/audiotransportstatus/include",
    "${audio_transport_path}/audiotransportstatus/interface",
    "${audio_transport_path}/encodetransport/include",
    "${audio_transport_path}/interface",
    "${common_path}/include",
    "${fwk_common_path}/utils/include",
    "${services_path}/common/audioeventcallback",
    "${services_path}/common/audiodata/include",
    "${services_path}/common/audioparam",
    "${softbusadapter_path}/include",
  ]
}

## UnitTest dmic_client_test
ohos_unittest("MicClientTest") {
  module_out_path = module_out_path

  sources = [
    "${audio_client_path}/test/unittest/micclient/src/dmic_client_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${services_path}/audioclient:distributed_audio_sink_client",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "audio_framework:audio_capturer",
  ]
}

group("mic_client_test") {
  testonly = true
  deps = [ ":MicClientTest" ]
}
