# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")
import("../../../../../distributedaudio.gni")

module_out_path =
    "distributed_audio/distributed_audio/services/audioclient/spk_client_test"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${audio_client_path}/interface",
    "${audio_client_path}/spkclient/include",
    "${audio_client_path}/test/unittest/spkclient/include",
    "${audio_client_path}/test/unittest/audioclienttestutils/include",
    "${audio_processor_path}/interface",
    "${audio_transport_path}/interface",
    "${audio_transport_path}/audioctrltransport/include",
    "${audio_transport_path}/receiverengine/include",
    "${audio_transport_path}/senderengine/include",
    "${common_path}/include",
    "${services_path}/common/audioeventcallback",
    "${services_path}/common/audiodata/include",
    "${services_path}/common/audioparam",
  ]
}

## UnitTest dspeaker_client_test
ohos_unittest("SpeakerClientTest") {
  module_out_path = module_out_path

  sources = [
    "${audio_client_path}/test/unittest/spkclient/src/dspeaker_client_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  deps = [
    "${services_path}/audiomanager/servicesink:distributed_audio_sink",
    "${services_path}/common:distributed_audio_utils",
  ]

  defines = []

  if (distributed_audio_extension_sa) {
    defines += [ "UT_COVER_SPECIAL" ]
  }

  external_deps = [
    "audio_framework:audio_capturer",
    "audio_framework:audio_client",
    "audio_framework:audio_renderer",
    "cJSON:cjson",
    "c_utils:utils",
    "distributed_hardware_fwk:distributed_av_receiver",
    "distributed_hardware_fwk:distributed_av_sender",
    "distributed_hardware_fwk:distributedhardwareutils",
    "dsoftbus:softbus_client",
    "googletest:gmock",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
}

group("spk_client_test") {
  testonly = true
  deps = [ ":SpeakerClientTest" ]
}
