# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../../../distributedaudio.gni")

module_out_path = "distributed_audio/services/audiocontrol/control_sink_test"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [ "${fwk_common_path}/utils/include" ]

  include_dirs += [
    "include",
    "${common_path}/include",
    "${services_path}/common/audiodata/include",
    "${services_path}/common/audioeventcallback",
    "${services_path}/common/audioparam",
    "${audio_transport_path}/interface",
    "${audio_transport_path}/audiochannel/interface",
    "${audio_transport_path}/audioctrltransport/include",
    "${audio_transport_path}/audioctrltransport/interface",
    "${audio_control_path}/controlsink/include",
  ]
}

## UnitTest ControlSinkTest
ohos_unittest("ControlSinkTest") {
  module_out_path = module_out_path

  sources = [ "src/daudio_sink_dev_ctrl_manager_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "${services_path}/audiomanager/servicesink:distributed_audio_sink",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [ "c_utils:utils" ]
}

group("control_sink_test") {
  testonly = true
  deps = [ ":ControlSinkTest" ]
}
