# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_audio/distributedaudio.gni")

module_out_path = "distributed_audio/services/audiocontrol/control_source_test"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "${fwk_common_path}/utils/include",
  ]

  include_dirs += [
    "include",
    "${common_path}/include",
    "${services_path}/common/audioparam",
    "${services_path}/common/audiodata/include",
    "${services_path}/common/audioeventcallback",
    "${audio_transport_path}/interface",
    "${audio_transport_path}/audiochannel/interface",
    "${audio_transport_path}/audioctrltransport/include",
    "${audio_transport_path}/audioctrltransport/interface",
    "${audio_control_path}/controlsource/include",
    "${audio_control_path}/test/unittest/audiocontrolutils/inlcude",
    "//base/security/access_token/interfaces/innerkits/token_setproc/include",
    "//base/security/access_token/interfaces/innerkits/nativetoken/include",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
  ]
}

## UnitTest ControlSourceTest
ohos_unittest("ControlSourceTest") {
  module_out_path = module_out_path

  sources = [ "src/daudio_source_dev_ctrl_manager_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "${services_path}/audiomanager/servicesource:distributed_audio_source",
    "//base/security/access_token/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
    "//base/security/access_token/interfaces/innerkits/nativetoken:libnativetoken",
    "//base/security/access_token/interfaces/innerkits/token_setproc:libtoken_setproc",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
  ]
}

group("control_source_test") {
  testonly = true
  deps = [ ":ControlSourceTest" ]
}
