# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//build/test.gni")
import("../../../../../distributedaudio.gni")

module_out_path = "distributed_audio/services/audiohdiproxy/daudio_hdi_handler"

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [ "${fwk_common_path}/utils/include" ]

  include_dirs += [
    "include",
    "${common_path}/include",
    "${services_path}/common/audiodata/include",
    "${services_path}/common/audioparam",
    "${services_path}/common/audiodata/include",
    "${services_path}/audiohdiproxy/include",
  ]
}

## UnitTest audiohdiproxy_test
ohos_unittest("DAudioHdiHandlerTest") {
  module_out_path = module_out_path

  sources = [ "src/daudio_hdi_handler_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "${services_path}/audiomanager/servicesource:distributed_audio_source",
    "//third_party/googletest:gmock",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_distributed_audio:libdaudioext_proxy_2.0",
    "ipc:ipc_core",
  ]
}

group("daudio_hdi_handler_test") {
  testonly = true
  deps = [ ":DAudioHdiHandlerTest" ]
}
